# jaylang

./: .execute_local_prebuild  .gitattributes  .gitignore  .merlin  .ocamlformat  .ocamlformat-ignore  .project  Changes  Dockerfile  LICENSE  Makefile  README.md  Vagrantfile  _oasis  _tags  a.bjy  avl_leaf_bugged.bjy  avl_leaf_bugged.jil  avl_rotate_bugged.jil  avl_tree.bjy  avl_tree_peval_manual.jay  build_dot.sh  debug  debug.jil  debug.odefa  debug1.jil  debug2.jil  docker-compose.yml  dot_absorb.py  dune  dune-project  dune-workspace.profile  fun_wrap.bjy  jay.opam  langdk.opam  legend.md  lmoa.jil  loop.jil  map.jil  minimal_bug.bjy  (+33 more)
benchmark/concolic/: cbenchmark.ml  cbenchmark2.ml  cbenchmark3.ml  cconfig.ml  cdbenchmark.ml  config.s  config_scheme.s  config_scheme2.s  dune  scheme-pldi-2015-examples.md  translate_tests.sh
obsolete/sandbox/: dune  sandbox.ml
obsolete/symbolic-interpreter/: dune  interpreter.ml  interpreter.mli  interpreter_types.ml  relative_stack.ml
src-partial-evaluator/: assignment.ml  dune  partial_evaluator.ml  types_and_printing.ml
src-test/concolic/: bjy_cloc.ml  dune  feature_tagger.ml  latex_table.ml  lib.ml  test_concolic.ml
src-test/dbmc/: dune  lib.ml  test_analysis.ml  test_concolic.ml  test_dbmc.ml  test_dbmc_cmd.ml  test_dummy.ml  test_rstack.ml
src-test/test-utils/: dune  feat_count.ml  metadata.ml  ttag.ml
src-test/unit/: dune  foo.ml  interpreter.ml  program_samples.ml  test_interp.ml  test_rstack.ml  test_scheduler.ml  test_unroll.ml
src/analysis/: abstract_interpreter.ml  analysis.ml  analysis_context_stack.ml  analysis_data_structures.ml  analysis_n_element_stack.ml  analysis_nonrepeating_stack.ml  analysis_single_element_stack.ml  analysis_two_element_stack.ml  analysis_unit_stack.ml  analysis_utils.ml  callstack.ml  cba_graph.ml  cba_graph_logger.ml  cba_graph_logger.mli  cba_graph_logger_types.ml  cba_graph_logger_utils.ml  cba_graph_logger_utils.mli  cba_graph_logger_utils_types.ml  ddpa_graph.ml  ddpa_graph_logger.ml  dune  grammar.ml  load.ml  main.ml  note.md  share.ml  size.ml  size_dataflow.ml  size_tabulate.ml  value.ml
src/ast/: ast.ml  ast_pp.ml  ast_pp_brief.ml  ast_pp_graph.ml  ast_pretty.ml  ast_tools.ml  ast_wellformedness.ml  dune  error.mli
src/concolic/: c_random.ml  c_random.mli  concolic_driver.ml  concolic_eval.ml  concolic_eval.mli  concolic_exceptions.ml  concolic_feeder.ml  concolic_feeder.mli  concolic_riddler.ml  concolic_riddler.mli  concolic_todo.md  cstate.ml  driver.ml  driver.mli  dune  dvalue.ml  dvalue.mli  effects.ml  effects.mli  eval_session.ml  eval_session.mli  evaluator.ml  evaluator.mli  intra_session.ml  intra_session.mli  jil_input.ml  options.ml  options.mli  semantics.ml  semantics.mli  session.ml  session.mli  symbolic_session.ml  symbolic_session.mli  value.ml
src/concolic-common/: cvalue.ml  direction.ml  direction.mli  dune  path.ml  pause.ml  pause.mli  stat.ml  stats.ml  status.ml  status.mli  target.ml  target.mli  target_queue.ml  target_queue.mli
src/dbmc/: Rstack.ml  argparse.ml  ast.ml  cfg.ml  checker.ml  concrete_stack.ml  constraint.ml  control_center.ml  cvar.ml  dbmc.ml  debug_log.ml  dune  gate.ml  graphviz.ml  helper.ml  id.ml  input_feeder.ml  interpreter.ml  log.ml  lookup.ml  lookup.mli  lookup_ddse_rule.ml  lookup_key.ml  lookup_rule.ml  lookup_stack.ml  lookup_task_key.ml  main.ml  main.not_used.ml  main_lwt.ml  naive_interpreter.ml  out_graph.ml  proof_graph.ml  pvar.ml  relative_stack.ml  riddler.ml  rstack.ml  rstack_v2.ml  ruler.ml  scheduler.ml  search_tree.ml  (+9 more)
src/dbmc-lib/: concrete_stack.ml  constraint.ml  dbmc.ml  dune  gate.ml  id.ml  lookup_stack.ml  relative_stack.ml  solver.ml  solver_helper.ml  symbol.ml  tracelet.ml
src/dbmc-top/: analysis_top.ml  dbmc_top.ml  dune  play.ml  shared.ml  term.ml
src/ddpa-analysis/: ast_pp.ml  ddpa_analysis.ml  ddpa_analysis_logging.ml  ddpa_context_stack.ml  ddpa_data_structures.ml  ddpa_graph.ml  ddpa_graph_logger.ml  ddpa_graph_logger.mli  ddpa_graph_logger_types.ml  ddpa_helper.ml  ddpa_n_element_stack.ml  ddpa_nonrepeating_stack.ml  ddpa_single_element_stack.ml  ddpa_two_element_stack.ml  ddpa_unit_stack.ml  ddpa_utils.ml  dune
src/deferred/: ceffects.ml  cmain.ml  deffects.ml  dune  effects.ml  err.ml  grammar.ml  main.ml  value.ml
src/deferred-concolic/: dune  effects.ml  main.ml  time_map.ml  value.ml
src/dj-common/: cfg.ml  dune  global_config.ml  scheduler.ml  solver_helper.ml  stage.ml  std.ml
src/dmbc-solver/: dune  solver.ml
src/eager-concolic/: dune  effects.ml  effects.mli  eval.ml  main.ml  main.mli  value.ml  value.mli
src/from_dbmc/: dune
src/interp-common/: callstack.ml  det_depth.ml  dune  effects.ml  errors.ml  input.ml  input.mli  input_feeder.ml  key.ml  rand.ml  step.ml  timestamp.ml
src/interpreter/: dune  input_feeder.ml  interp.ml  interpreter.ml  interpreter.mli  naive_interpreter.ml
src/jay-translate/: dune  jay_alphatize.ml  jay_desugar.ml  jay_to_jayil.ml  jay_to_jayil_flatten.ml  jay_to_jayil_maps.ml  jay_to_jayil_maps.mli  jay_to_jayil_monad.ml  jay_to_jayil_preliminary.ml  jay_to_jayil_simplification.ml  jayil_eliminate_alias.ml  lazy_logger.ml  main.ml  translation_context.ml
src/jayil-instrumentation/: dune  instrumentation.ml  jay_to_jayil_monad_inst.ml  jayil_instrumentation_maps.ml  jayil_instrumentation_maps.mli
src/jil-instrumentation/: dune  instrumentation.ml  jay_to_jayil_monad_inst.ml  odefa_instrumentation_maps.ml  odefa_instrumentation_maps.mli  on_to_odefa_monad_inst.ml
test/: dune  formula_test_utils.ml  test.ml  test_files.ml  test_nested.ml  test_reachability.ml  test_resugar.ml  test_solver.ml  test_swan.ml  test_symbolic_monad.ml  test_toy.ml  test_toy_files.ml  test_toy_utils.ml  test_utils.ml
test/analysis/: a0.jil  a1.jil  ap.jil  ap0.jil  ap1.jil  ap2.jil  ap3.jil  ap4.jil  n0.jil  n1.jil
test/dbmc/: dune  test_dbmc.ml  test_expect.ml
test/ddse-unittest/: dune  formula_test_utils.ml  test_files.ml  test_solver.ml
test/features/: dep.bjy  dtype.bjy  inline_type.bjy  proj.bjy  rec_with.bjy  simple_poly.bjy  (+2 more)
(+5258 files in other folders)
