opam-version: "1.2"
name: "odefa"
version: "0.4+dev"
maintainer: "JHU PL Lab <pl.cs@jhu.edu>"
authors: [ "JHU PL Lab <pl.cs@jhu.edu>" ]
license: "Apache"
homepage: "https://github.com/JHU-PL-Lab/odefa"
dev-repo: "https://github.com/JHU-PL-Lab/odefa.git"
bug-reports: "https://github.com/JHU-PL-Lab/odefa/issues"
build: [ "jbuilder" "build" "-p" name "-j" jobs ]
build-test: [ "jbuilder" "runtest" "-p" name "-j" jobs ]
depends: [
  "base-threads"
  "batteries"
  "dune" {build & >= "1.0"}
  "jhupllib" {>= "0.1.1"}
  "ocaml-monadic"
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ounit" {build}
  "ppx_deriving" {>= "3.2"}
  "ppx_deriving_yojson" {>= "2.1"}
  "yojson"
]
