opam-version: "2.0"
name: "odefa"
version: "0.4.1+dev"
synopsis: "Artifact for Higher-Order Demand-Driven Program Analysis"
maintainer: "JHU PL Lab <pl.cs@jhu.edu>"
authors: [ "JHU PL Lab <pl.cs@jhu.edu>" ]
license: "Apache"
homepage: "https://github.com/JHU-PL-Lab/odefa"
dev-repo: "git+https://github.com/JHU-PL-Lab/odefa.git"
bug-reports: "https://github.com/JHU-PL-Lab/odefa/issues"
build: [ "dune" "build" "-p" name "-j" jobs ]
run-test: [ "dune" "runtest" "-p" name "-j" jobs ]
depends: [
  "ocaml" {>= "4.04.0"}
  "base-threads"
  "batteries"
  "dune" {build & >= "1.0"}
  "jhupllib" {>= "0.1.1"}
  "ocaml-monadic" {>= "0.4.1"}
  "ocamlbuild" {build}
  "ocamlfind" {build}
  "ounit" {build}
  "ppx_deriving" {>= "3.2"}
  "ppx_deriving_yojson" {>= "2.1"}
  "yojson"
]
