(library
 (name partial_evaluator)
 (public_name jay.partial_evaluator)
 (libraries core fmt lwt ddpa jayil jayil_parser dbmc)
 (private_modules types_and_printing)
 (synopsis
  "Sato, the Symbolic Analysis Typechecker for Odefa, dynamically locates type errors using demand-driven symbolic execution.")
 (inline_tests)
 (preprocess
  (pps ppx_jane ppx_deriving.std ppx_deriving_yojson lwt_ppx)))

(env
 (dev
  (flags
   (:standard -w -33 -w -26))))
