(alias
  (name runtest)
  (deps test.exe (glob_files ../test-sources/*))
  (action (chdir .. (run ./test/test.exe)))
)

(executable
  (name test)
  (libraries
    batteries
    jhupllib
    odefa.ast
    odefa.ddpa
    odefa.parser
    odefa.toploop
    odefa.natural
    oUnit
    ppx_deriving_yojson
    yojson
  )
  (preprocess
    (pps
      ppx_deriving.std
      ppx_deriving_yojson
    )
  )
)
