(library
  (name cconfig)
  (modules cconfig)
  (libraries core)
  (preprocess
    (pps ppx_jane)))

(executable
 (name cbenchmark)
 (modules cbenchmark)
 (package jay)
 (public_name jay.cbenchmark_test_generation)
 (libraries cconfig shexp.process core core_unix.sys_unix)
 (preprocess
  (pps ppx_jane)))

(executable
 (name cbenchmark2)
 (modules cbenchmark2)
 (package jay)
 (public_name jay.cbenchmark2_test_generation)
 (libraries latex_table dj_common concolic shexp.process core core_unix.sys_unix)
 (preprocess
  (pps ppx_jane)))

(env
 (dev
  (flags
   (:standard -w -32))))
