(copy_files# sat/*.{ml,mli})
(copy_files# symbolic-monad/*.{ml,mli})
(library
  (name odefa_symbolic_interpreter)
  (public_name odefa.symbolic-interpreter)
  (synopsis "Symbolic interpreter for Odefa")
  (libraries
    batteries
    gmap
    jhupllib
    z3
    odefa.ast
    odefa.ddpa
    odefa.utils
  )
  (preprocess
    (pps
      ocaml-monadic
      ppx_deriving.std
      ppx_deriving_yojson
    )
  )
)
