; (rule
;  (alias test_dbmc)
;  (action
;   (run %{exe:test_dbmc.exe} --tp "../../../../test/dbmc")))

(rule
 (alias test_rstack)
 (action
  (run ./test_rstack.exe)))

(tests
 (names test_dbmc test_rstack)
 (libraries core core_unix.sys_unix cmdliner alcotest alcotest-lwt dbmc)
 (preprocess
  (pps ppx_jane lwt_ppx ppx_deriving.std ppx_expect)))
