
(library
  (name ttag)
  (modules ttag)
  (libraries
    core
    core_unix.sys_unix)
  (preprocess
   (pps ppx_jane)))

(library
  (name metadata)
  (modules metadata)
  (libraries
    ttag
    core_unix.sys_unix
    core)
  (preprocess (pps ppx_jane)))

(executable
 (name feat_count)
 (modules feat_count)
 (libraries ttag core latex_tbl metadata utils))