(alias
 (name unittest))

(rule
 (alias unittest)
 (action
  (run ./test_interp.exe)))

(rule
 (alias test_rstack)
 (action
  (run ./test_rstack.exe)))

(tests
 (names test_interp test_rstack test_scheduler test_unroll)
 (libraries core core_bench alcotest jayil jayil_parser unroll dbmc)
 (preprocess
  (pps ppx_jane lwt_ppx)))
