(include_subdirs unqualified)

(library
 (name analysis)
 (public_name jay.analysis)
 (libraries
  core
  lang
  interp_common
 )
 (synopsis "Program analysis on embedded-type programs")
 (inline_tests)
 (instrumentation (backend landmarks --auto))
 (preprocess
  (pps
   ppx_sexp_conv
   ppx_compare
   ocaml-monadic)))