(include_subdirs unqualified)

(library
 (name concolic_common)
 (public_name jay.concolic_common)
 (libraries
  core
  utils
  ; overlays
  interp_common
  lang
  smt
  )
 (synopsis "Common concolic constructs for the Jaylang project")
 (inline_tests)
 (instrumentation
  (backend landmarks))
 (preprocess (pps ppx_compare ppx_variants_conv ppx_sexp_conv ocaml-monadic landmarks-ppx --auto)))