(include_subdirs unqualified)

(library
 (name concolic_common)
 (public_name jay.concolic_common)
 (libraries
  core
  utils
  smt
  psq
  lwt
  lwt.unix
  interp_common
  lang
  )
 (synopsis "Common concolic constructs for the Jaylang project")
 (inline_tests)
 (instrumentation (backend landmarks --auto))
 (preprocess (pps ppx_compare ppx_variants_conv ppx_sexp_conv ocaml-monadic)))