(include_subdirs unqualified)

(library
 (name concolic)
 (public_name jay.concolic)
 (libraries
  core
  lwt
  lwt.unix
  translate
  cmdliner
  concolic_common
  eager_concolic
  deferred
  mtime
  mtime.clock.os
 )
 (synopsis "Concolic evaluator on embedded-type programs")
 (inline_tests)
 (instrumentation (backend landmarks --auto)) ; use `dune build --instrument-with landmarks` to get instrumentation
 (preprocess
  (pps
   ppx_sexp_conv
   ppx_compare
   ocaml-monadic)))