(include_subdirs qualified)

(library
 (name concolic)
 (public_name jay.concolic)
 (libraries
  core
  lwt
  lwt.unix
  translate
  interpreter
  cmdliner
  interp_common
  baby
  psq
  mtime
 )
 (synopsis "Concolic evaluator on embedded-type programs")
 (inline_tests)
 (instrumentation (backend landmarks --auto)) ; use `dune build --instrument-with landmarks` to get instrumentation
 (preprocess
  (pps
   ppx_sexp_conv
   ppx_compare
   ppx_variants_conv
   ocaml-monadic)))