(include_subdirs unqualified)

(library
 (name concolic)
 (public_name jay.concolic)
 (libraries
  core
  fmt
  lwt
  lwt.unix
  z3
  logs
  logs.lwt
  logs.fmt
  from_dbmc
  jayil
  jay_translate
  jay_instrumentation
  jayil_parser
  bluejay
  dj_common
  sudu
  psq) ; psq added for queue of target branches
 (instrumentation (backend landmarks --auto))
 (synopsis "dbmc is demand-driven bounded model checking")
 (inline_tests)
 (preprocess
  (pps
   ppx_jane
   ppx_deriving.show
   lwt_ppx)))

