(executable
 (name dbmc_top)
 (modules dbmc_top)
 (libraries core logs dbmc odefa.ast)
 (preprocess
  (pps ppx_jane -allow-unannotated-ignores ppx_deriving.show lwt_ppx)))

(executables
 (names console)
 (modules console)
 (libraries core logs lambda-term dbmc odefa.ast)
 (preprocess
  (pps ppx_jane -allow-unannotated-ignores ppx_deriving.show lwt_ppx)))

(executable
 (name analysis_top)
 (modules analysis_top)
 (libraries core analysis))

(executable
 (name play)
 (modules play)
 (libraries core fix logs)
 (preprocess
  (pps ppx_jane -allow-unannotated-ignores ppx_deriving.show lwt_ppx)))

(env
 (dev
  (flags
   (:standard -w -33 -w -26))))
