(include_subdirs unqualified)

(library
 (name dbmc)
 (public_name odefa.dbmc)
 (libraries
  core
  core_kernel.pairing_heap
  core_unix.nano_mutex
  core_unix.filename_unix
  core_unix.command_unix
  fmt
  lwt
  lwt.unix
  z3
  logs
  logs.lwt
  logs.fmt
  ocamlgraph
  hashcons
  odefa.ast
  odefa.ddpa
  odefa.natural
  odefa.parser
  odefa.unroll
  sudu)
 ;  (instrumentation
 ;   (backend landmarks))
 (synopsis "dbmc is demand-driven bounded model checking")
 (inline_tests)
 (preprocess
  (pps
   ppx_jane
   ppx_deriving.show
   lwt_ppx
   ;   landmarks-ppx --auto
   )))

(env
 (dev
  (flags
   (:standard -w -33 -w -26))))
