(include_subdirs unqualified)

(library
 (name dbmc)
 (public_name jay.dbmc)
 (libraries
  core
  fmt
  lwt
  lwt.unix
  z3
  logs
  logs.lwt
  logs.fmt
  ocamlgraph
  hashcons
  jayil
  ddpa
  jay_translate
  jay_instrumentation
  jayil_parser
  bluejay
  jay.unroll
  dj_common
  sudu)
 ;  (instrumentation
 ;   (backend landmarks))
 (synopsis "dbmc is demand-driven bounded model checking")
 (inline_tests)
 (preprocess
  (pps
   ppx_jane
   ppx_deriving.show
   lwt_ppx
   ;   landmarks-ppx --auto
   )))

(env
 (dev
  (flags
   (:standard -w -33 -w -26 -w -27))))
