(library
 (name deferred_concolic)
 (public_name jay.deferred_concolic)
 (libraries
  core
  lang
  utils
  baby
  interp_common
  concolic_common
  preface
  interpreter
 )
 (synopsis "Deferred concolic evaluator on typed-embedded programs")
 (inline_tests)
 (instrumentation (backend landmarks --auto))
 (preprocess
  (pps
   ppx_compare
   ppx_fields_conv
   ocaml-monadic)))