(include_subdirs unqualified)

(library
 (name deferred)
 (public_name jay.deferred)
 (libraries
  core
  lang
  utils
  baby
  interp_common
  preface
 )
 (synopsis "Deferred evaluator on embedded-type programs")
 (inline_tests)
 (preprocess
  (pps
   ppx_compare
   ocaml-monadic
   landmarks-ppx
   --auto)))