(include_subdirs unqualified)

(library
 (name deferred)
 (public_name jay.deferred)
 (libraries
  core
  lang
  utils
  baby
  interp_common
  concolic
  preface
  interpreter
 )
 (synopsis "Deferred evaluator on embedded-type programs")
 (inline_tests)
 (preprocess
  (pps
   ppx_compare
   ppx_fields_conv
   ocaml-monadic
   landmarks-ppx
   --auto)))