(library
  (name dmbc_solver)
  (public_name odefa.dmbc_solver)
  (libraries
    core z3
    odefa.dbmc_lib
    odefa.ast
    odefa.symbolic-interpreter
  )
  (synopsis "odefa solver based on Core")
  (inline_tests)
  (preprocess
    (pps ppx_jane)) 
  )
(env
  (dev
    (flags (:standard -w -33 -w -26))))