(include_subdirs unqualified)

(library
 (name eager_concolic)
 (public_name jay.eager_concolic)
 (libraries
  core
  lang
  utils
  interp_common
  concolic_common
  preface
 )
 (synopsis "Eager concolic evaluator on embedded-type programs")
 (inline_tests)
 (instrumentation (backend landmarks --auto))
 (preprocess
  (pps
   ppx_compare
   ppx_fields_conv
   ocaml-monadic)))