(include_subdirs unqualified)

(library
 (name interp_common)
 (public_name jay.interp_common)
 (libraries
  core
  vector
  utils
  lang
  overlays
  smt
  )
 (synopsis "Common interpreter constructs for the Jaylang project")
 (inline_tests)
 (instrumentation
  (backend landmarks))
 (preprocess (pps ppx_compare ppx_sexp_conv ocaml-monadic landmarks-ppx --auto)))