(library
 (name interp_common)
 (public_name jay.interp_common)
 (libraries
  core
  vector
  utils
  lang
  overlays
  smt
  )
 (synopsis "Common interpreter constructs for the Jaylang project")
 (inline_tests)
 (instrumentation (backend landmarks --auto))
 (instrumentation (backend bisect_ppx))
 (preprocess (pps ppx_compare ppx_sexp_conv ppx_hash ocaml-monadic)))