(library
  (name jay_instrumentation)
  (public_name jay.instrumentation)
  (synopsis "Instrumentation for odefa")
  (libraries
    core
    batteries
    jhupllib
    monadlib
    jayil
  )
  (preprocess
    (pps
      ppx_deriving.std
      ppx_deriving_yojson
      ocaml-monadic
    )
  )
  (flags
    (:standard -w -39) ;for ppx_deriving_yojson, which generates extra rec flags
  )
)
