(library
  (name odefa_instrumentation)
  (public_name odefa.instrumentation)
  (synopsis "Instrumentation for odefa")
  (libraries
    core
    batteries
    jhupllib
    monadlib
    odefa.ast
  )
  (preprocess
    (pps
      ppx_deriving.std
      ppx_deriving_yojson
      ocaml-monadic
    )
  )
  (flags
    (:standard -w -39) ;for ppx_deriving_yojson, which generates extra rec flags
  )
)
